--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.9",
     "next": "13.4.1",
+    "next-swagger-doc": "^0.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.25.3",
     "tailwindcss": "3.3.2"
   }
 }
