--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,mdx,html,markdown}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,md,mdx,html,markdown}\" --ignore-path .gitignore",
     "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
@@ -25,5 +25,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.25.3",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
