--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "clean": "rm -rf .next node_modules && npm install"
   },
   "dependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
